--- a/apifront/src/app/components/books/books.component.html
+++ b/apifront/src/app/components/books/books.component.html
@@ -16,7 +16,7 @@
                 <h5 class="blue-text">
                 <mdb-icon fas icon="book"></mdb-icon> {{ book.name }} </h5>
                 <!--Title-->
-                <h4 class="card-title">{{ book.name }}{{ book.id }}</h4>
+                <h4 class="card-title">{{ book.name }}</h4>
                 <!--Text-->
                 <mdb-card-text>{{ book.description }}</mdb-card-text>
                 <a mdbBtn color="unique" class="waves-light" mdbWavesEffect [routerLink]="[book.id]">More ...</a>
